[package]
name = "inth-oauth2-async"
version = "0.1.0"
edition = "2018"

description = "OAuth2 client"
keywords = ["authentication", "authorization", "auth", "oauth"]

authors = ["Curtis McEnroe <programble@gmail.com>", "Bill Fraser <wfraser@codewise.org>"]
license = "ISC"

repository = "https://github.com/wfraser/inth-oauth2-async"
readme = "README.md"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
lazy_static = "1.1.0"
serde = "1.0.8"
serde_derive = "1.0.5"
serde_json = "1.0.2"
url = "1.1.0"
reqwest = "0.9.2"
