[package]
name = "inth-oauth2-async"
version = "0.17.0"
edition = "2018"

description = "OAuth2 client"
keywords = ["authentication", "authorization", "auth", "oauth"]

authors = ["Curtis McEnroe <programble@gmail.com>", "Bill Fraser <wfraser@codewise.org>"]
license = "ISC"

repository = "https://github.com/wfraser/inth-oauth2-async"
readme = "README.md"

[dependencies]
async-trait = "0.1.50"
chrono = { version = "0.4", features = ["serde"] }
lazy_static = "1.1.0"
serde = "1.0.8"
serde_derive = "1.0.5"
serde_json = "1.0.2"
url = "2.2.2"

# Reqwest client:
reqwest = { version = "0.11.3", optional = true }

# Hyper client:
base64 = { version = "*", optional = true }
hyper = { version = "0.14", optional = true }
tokio = { version = "*", optional = true }
tower-service = {version = "*", optional = true }

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }

[features]
default = ["reqwest-client"]
hyper-client = ["base64", "hyper", "tokio", "tower-service"]
reqwest-client = ["reqwest"]
